# flowstrat

./: .gitignore  .polyaxonignore  .pre-commit-config.yaml  Makefile  README.md  conda.yml  pyproject.toml
.dvc/: config
.github/workflows/: build.yml
conf/base/: catalog.yml  logging.yml  parameters.yml
conf/base/parameters/: scenario1d.yml  scenario2d.yml  scenarioTS3d.yml  scenarioWind2d.yml
data/scenario1d/: dataset_train.pkl.dvc  evaluation.pkl.dvc  model.pt.dvc  test.pkl
data/scenario2d/: dataset_train.pkl.dvc  evaluation.pkl.dvc  model.pt.dvc
data/scenarioTS3d/: dataset_train.csv.dvc  model.pkl.dvc
data/scenarioWind2d/: dataset_train.pkl.dvc  evaluation.pkl.dvc  model.pt.dvc
src/CNF_lib/: custom_optimizers.py  multiscale_parallel.py  spectral_norm.py  visualize_flow.py
src/CNF_lib/layers/: cnf.py  odefunc.py
src/CNF_lib/layers/diffeq_layers/: basic.py  wrappers.py
src/flowstrat/: __init__.py  __main__.py  cnf_utils.py  hooks.py  kedro_extras.py  pipeline_registry.py  settings.py  utils.py  utils_quantiles.py  utils_strata.py
src/flowstrat/pipelines/: node_utils.py
src/flowstrat/pipelines/sanity_check/: nodes.py  pipeline.py
src/flowstrat/pipelines/scenario1d/: nodes.py  pipeline.py
src/flowstrat/pipelines/scenario2d/: __init__.py  nodes.py  pipeline.py
src/flowstrat/pipelines/scenarioTS3d/: README.md  nodes.py  nsphere.py  pipeline.py
src/tests/: conftest.py  test_run.py
src/tests/pipelines/scenario1d/: test_pipeline.py
