[tool.kedro]
package_name = "flowstrat"
project_name = "flowstrat"
kedro_init_version = "0.18.8"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/flowstrat -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "flowstrat"
version = "0.1.0"
description = "Reducing Estimation Uncertainty Using Normalizing Flows and Stratification"
authors = ["AUTHOR BLINDED"] # TODO: add info here
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.23.1"
scipy = "^1.9.0"
torch = "^1.12.1"
icecream = "^2.1.3"
kedro = "^0.18.8"
wandb = "^0.13.1"
polyaxon = "^1.19.0"
scikit-learn = "^1.1.2"
pandas = "^1.4.3"
matplotlib = "^3.5.3"
torchdiffeq = "^0.2.3"
tqdm = "^4.64.0"
normflows = "^1.4"
dvc-gdrive = "^2.19.1"
torchvision = "^0.12"
notebook = "^6.5.4"
importlib = "^1.0.4"
hmmlearn = "^0.2.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "~3.0"
pytest-mock = ">=1.7.1, <2.0"
kedro-viz = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
